refactor: clarify resolveRepoDir false arg, use List.of for placeholders